# pocketclaw

./: .gitignore  CARCINIZATION_PLAN.md  DEVLOG.md  EMERGENT_BOND.md  README.md  dashboard.html  landing.html  pocketclaw-deck-standalone.html  pocketclaw-deck.html
PocketClaw/android/: settings.gradle.kts
PocketClaw/android/app/: build.gradle.kts
PocketClaw/android/app/src/main/: AndroidManifest.xml
PocketClaw/android/app/src/main/java/com/llmhub/llmhub/data/: LlmHubDatabase.kt
PocketClaw/android/app/src/main/java/com/llmhub/llmhub/inference/: InferenceService.kt  NexaInferenceService.kt  OnnxInferenceService.kt
PocketClaw/android/app/src/main/java/com/llmhub/llmhub/utils/: FileUtils.kt
PocketClaw/android/app/src/main/java/com/pocketclaw/app/: MainActivity.kt  PocketClawApplication.kt
PocketClaw/android/app/src/main/res/drawable/: ic_crab.xml  ic_launcher_foreground.xml
PocketClaw/android/app/src/main/res/values/: strings.xml  themes.xml
PocketClaw/android/app/src/main/res/values-ar/: strings.xml
PocketClaw/android/app/src/main/res/values-de/: strings.xml
PocketClaw/android/app/src/main/res/values-es/: strings.xml
PocketClaw/android/app/src/main/res/values-fa/: strings.xml
PocketClaw/android/app/src/main/res/values-fr/: strings.xml
PocketClaw/android/app/src/main/res/values-he/: strings.xml
PocketClaw/android/app/src/main/res/values-in/: strings.xml
PocketClaw/android/app/src/main/res/values-it/: strings.xml
PocketClaw/android/app/src/main/res/values-iw/: strings.xml
PocketClaw/android/app/src/main/res/values-ja/: strings.xml
PocketClaw/android/app/src/main/res/values-ko/: strings.xml
PocketClaw/android/app/src/main/res/values-pl/: strings.xml
PocketClaw/android/app/src/main/res/values-pt/: strings.xml
PocketClaw/android/app/src/main/res/values-ru/: strings.xml
PocketClaw/android/app/src/main/res/values-tr/: strings.xml
PocketClaw/android/app/src/main/res/values-uk/: strings.xml
PocketClaw/android/app/src/main/res/values-zh/: strings.xml
PocketClaw/android/app/src/main/res/xml/: accessibility_service_config.xml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
android/app/src/main/java/com/crabagent/app/: CrabApplication.kt  MainActivity.kt
android/app/src/main/java/com/crabagent/app/cloud/: CloudClient.kt  Protocol.kt
android/app/src/main/java/com/crabagent/app/receiver/: BootReceiver.kt
android/app/src/main/java/com/crabagent/app/service/: ActionExecutor.kt  CrabForegroundService.kt  CrabNotificationListener.kt
android/app/src/main/java/com/pocketclaw/app/: MainActivity.kt  PocketClawApplication.kt
android/app/src/main/java/com/pocketclaw/app/brain/: BrainEngine.kt  DashScopeProvider.kt  LlmProvider.kt  LocalLlmProvider.kt  SkillRouter.kt
android/app/src/main/java/com/pocketclaw/app/cloud/: Protocol.kt
android/app/src/main/java/com/pocketclaw/app/data/: CustomSkill.kt  Memory.kt  Preferences.kt
android/app/src/main/java/com/pocketclaw/app/model/: ModelDownloadManager.kt
android/app/src/main/java/com/pocketclaw/app/receiver/: BootReceiver.kt
android/app/src/main/java/com/pocketclaw/app/service/: ActionExecutor.kt  ClawForegroundService.kt  ClawNotificationListener.kt
android/app/src/main/java/com/pocketclaw/app/ui/: CrabGrowth.kt  MainViewModel.kt  ModelDownloadScreen.kt
android/app/src/main/java/com/pocketclaw/app/voice/: KokoroTtsEngine.kt  LlamaEngine.kt  WhisperEngine.kt
android/app/src/main/res/drawable/: ic_crab.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
cloud/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
cloud/brain/: Cargo.toml
cloud/brain/src/: lib.rs  llm.rs  orchestrator.rs
cloud/carapace/: Cargo.toml
cloud/carapace/src/: lib.rs
cloud/pincers/: Cargo.toml
cloud/pincers/src/: context.rs  lib.rs  router.rs
cloud/protocol/: Cargo.toml
cloud/protocol/src/: action.rs  event.rs  lib.rs  skill.rs
cloud/server/: Cargo.toml
cloud/server/src/: main.rs
(+50 files in other folders)
