[package]
name = "crab-brain"
description = "CrabAgent reasoning kernel — intent routing, LLM orchestration, action planning"
version.workspace = true
edition.workspace = true

[dependencies]
crab-protocol = { path = "../protocol" }
crab-pincers = { path = "../pincers" }
crab-carapace = { path = "../carapace" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
