[package]
name = "crab-carapace"
description = "CrabAgent WASM sandbox executor (the carapace/shell)"
version.workspace = true
edition.workspace = true

[dependencies]
crab-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = "30"
wasmtime-wasi = "30"
