[package]
name = "crab-pincers"
description = "CrabAgent semantic router (left pincer) + context fetcher (right pincer)"
version.workspace = true
edition.workspace = true

[dependencies]
crab-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
