[package]
name = "crab-server"
description = "CrabAgent cloud HTTP server — receives phone events, returns actions"
version.workspace = true
edition.workspace = true

[dependencies]
crab-protocol = { path = "../protocol" }
crab-brain = { path = "../brain" }
crab-pincers = { path = "../pincers" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-trait = "0.1"
dotenvy = "0.15"
